--- a/WorkingNotebook.ipynb
+++ b/WorkingNotebook.ipynb
@@ -2,17 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "\n"
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +165,7 @@
        "4    0.245483                       0.382612           2.430182  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -261,40 +260,123 @@
        "      <td>5441703</td>\n",
        "      <td>2017</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8614</th>\n",
+       "      <td>Other</td>\n",
+       "      <td>Oceania</td>\n",
+       "      <td>Australia</td>\n",
+       "      <td>36</td>\n",
+       "      <td>Internet_Access</td>\n",
+       "      <td>2350</td>\n",
+       "      <td>2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8624</th>\n",
+       "      <td>Other</td>\n",
+       "      <td>Oceania</td>\n",
+       "      <td>Kiribati</td>\n",
+       "      <td>296</td>\n",
+       "      <td>Libraries</td>\n",
+       "      <td>10</td>\n",
+       "      <td>2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8625</th>\n",
+       "      <td>Other</td>\n",
+       "      <td>Oceania</td>\n",
+       "      <td>Kiribati</td>\n",
+       "      <td>296</td>\n",
+       "      <td>Internet_Access</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8626</th>\n",
+       "      <td>Other</td>\n",
+       "      <td>Oceania</td>\n",
+       "      <td>Kiribati</td>\n",
+       "      <td>296</td>\n",
+       "      <td>Staff</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8627</th>\n",
+       "      <td>Other</td>\n",
+       "      <td>Oceania</td>\n",
+       "      <td>Kiribati</td>\n",
+       "      <td>296</td>\n",
+       "      <td>Volunteers</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2017</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>870 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Library Type  Region Country or Area  M49 Code           Metric  \\\n",
-       "33     Academic  Europe         Belgium        56        Libraries   \n",
-       "34     Academic  Europe         Belgium        56  Internet_Access   \n",
-       "35     Academic  Europe         Belgium        56            Staff   \n",
-       "37     Academic  Europe         Belgium        56            Users   \n",
-       "38     Academic  Europe         Belgium        56           Visits   \n",
+       "     Library Type   Region Country or Area  M49 Code           Metric  \\\n",
+       "33       Academic   Europe         Belgium        56        Libraries   \n",
+       "34       Academic   Europe         Belgium        56  Internet_Access   \n",
+       "35       Academic   Europe         Belgium        56            Staff   \n",
+       "37       Academic   Europe         Belgium        56            Users   \n",
+       "38       Academic   Europe         Belgium        56           Visits   \n",
+       "...           ...      ...             ...       ...              ...   \n",
+       "8614        Other  Oceania       Australia        36  Internet_Access   \n",
+       "8624        Other  Oceania        Kiribati       296        Libraries   \n",
+       "8625        Other  Oceania        Kiribati       296  Internet_Access   \n",
+       "8626        Other  Oceania        Kiribati       296            Staff   \n",
+       "8627        Other  Oceania        Kiribati       296       Volunteers   \n",
        "\n",
-       "   Metric Data Data Year  \n",
-       "33         140      2017  \n",
-       "34         140      2017  \n",
-       "35         502      2017  \n",
-       "37      239338      2017  \n",
-       "38     5441703      2017  "
+       "     Metric Data Data Year  \n",
+       "33           140      2017  \n",
+       "34           140      2017  \n",
+       "35           502      2017  \n",
+       "37        239338      2017  \n",
+       "38       5441703      2017  \n",
+       "...          ...       ...  \n",
+       "8614        2350      2017  \n",
+       "8624          10      2017  \n",
+       "8625           1      2017  \n",
+       "8626           7      2017  \n",
+       "8627           0      2017  \n",
+       "\n",
+       "[870 rows x 7 columns]"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "libraries_df = libraries_df.loc[(libraries_df[\"Data Year\"] == \"2017\"), :]\n",
+    "libraries_df = libraries_df.dropna()\n",
     "\n",
-    "libraries_df.head()"
+    "#libraries_df.drop(libraries_df[libraries_df[\"Metric Data\"]==\"NaN\"].index, inplace=True)\n",
+    "\n",
+    "#library_df = libraries_df.drop(libraries_df[libraries_df[\"Metric Data\"] == \"NaN\"].index, inplace=False)\n",
+    "\n",
+    "#test_df = libraries_df.loc[libraries_df[\"Metric Data\"]==\"NaN\", :]\n",
+    "libraries_df\n",
+    "\n",
+    "#test_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +738,7 @@
        "[966 rows x 19 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -668,7 +750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -858,7 +940,7 @@
        "17  Europe         Finland     246.0            Users     1073494      2017  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -870,30 +952,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\pamme\\Anaconda3\\envs\\PythonData\\lib\\site-packages\\ipykernel_launcher.py:4: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  after removing the cwd from sys.path.\n"
+     ]
+    },
+    {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>M49 Code</th>\n",
+       "      <th>Metric Data (INT)</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Library Type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Academic</th>\n",
+       "      <td>10306</td>\n",
+       "      <td>155850188</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Community</th>\n",
+       "      <td>1612</td>\n",
+       "      <td>2548722</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>National</th>\n",
+       "      <td>8095</td>\n",
+       "      <td>18465884</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Other</th>\n",
+       "      <td>3868</td>\n",
+       "      <td>3549043</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Public</th>\n",
+       "      <td>12889</td>\n",
+       "      <td>314054339</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>School</th>\n",
+       "      <td>3256</td>\n",
+       "      <td>135045600</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "array(['Iceland', 'Finland', 'Canada', 'New Zealand', 'Australia',\n",
-       "       'Israel', 'Austria', 'Ireland', 'Belgium', 'Luxembourg', 'Chile',\n",
-       "       'Argentina', 'Mexico', 'Singapore', 'Uruguay', 'Panama', 'France',\n",
-       "       'Spain', 'Qatar', 'Trinidad and Tobago', 'Slovakia', 'Malaysia',\n",
-       "       'Nicaragua', 'Ecuador', 'El Salvador', 'Poland', 'Kazakhstan',\n",
-       "       'Mauritius', 'Turkey', 'Serbia', 'Hungary', 'Jamaica', 'China',\n",
-       "       'Dominican Republic', 'Greece', 'Portugal', 'Honduras', 'Nigeria',\n",
-       "       'Bhutan', 'Nepal', 'Egypt', 'Bulgaria', 'Zambia', 'Sri Lanka',\n",
-       "       'Armenia', 'India', 'Georgia', 'Cambodia', 'Ghana', 'Ukraine',\n",
-       "       'Uganda', 'Zimbabwe', 'Benin', 'Yemen', 'Guinea', 'Burundi'],\n",
-       "      dtype=object)"
+       "              M49 Code  Metric Data (INT)\n",
+       "Library Type                             \n",
+       "Academic         10306          155850188\n",
+       "Community         1612            2548722\n",
+       "National          8095           18465884\n",
+       "Other             3868            3549043\n",
+       "Public           12889          314054339\n",
+       "School            3256          135045600"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "library_visits_df = libraries_df.loc[libraries_df[\"Metric\"]==\"Visits\", :]\n",
+    "\n",
+    "#library_visits_df.dropna()\n",
+    "library_visits_df[\"Metric Data (INT)\"] = library_visits_df[\"Metric Data\"].astype(int)\n",
+    "\n",
+    "\n",
+    "#library_visits_df.head(100)\n",
+    "type_group_df = library_visits_df.groupby([\"Library Type\"]).sum()\n",
+    "\n",
+    "type_group_df"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
    "source": []
   }
  ],
