added note to clean up graphs

--- a/WorkingNotebook.ipynb
+++ b/WorkingNotebook.ipynb
@@ -1444,7 +1444,10 @@
     "number_group = number_libraries_df.groupby([\"Country\"])\n",
     "num_lib_df = number_group.sum()\n",
     "num_lib_df = pd.DataFrame(num_lib_df[\"Metric Data\"])\n",
-    "num_lib_df"
+    "num_lib_df\n",
+    "\n",
+    "#plan is to limit to happiest country to make this more manageable -- \n",
+    "#otherwise the option is to download population data"
    ]
   },
   {
@@ -1544,7 +1547,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
