--- a/WorkingNotebook.ipynb
+++ b/WorkingNotebook.ipynb
@@ -130,7 +130,8 @@
    "source": [
     "## **********Move up to cell 1 once team can coordinate***********\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "\n"
    ]
   },
   {
@@ -159,7 +160,8 @@
     "#     plt.text(column.get_x() + column.get_width()/2.0, height, '%d' % float(height), ha='center', va='bottom')\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n"
    ]
   },
   {
