--- a/WorkingNotebook.ipynb
+++ b/WorkingNotebook.ipynb
@@ -139,8 +139,7 @@
    "source": [
     "## **********Move up to cell 1 once team can coordinate***********\n",
     "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
-    "\n"
+    "import numpy as np"
    ]
   },
   {
@@ -162,15 +161,18 @@
     "happy_bar = plt.bar(countries, happiness, align=\"center\")\n",
     "plt.xticks(rotation=\"vertical\")\n",
     "plt.title(\"20 happiest countries by rank, 2017\")\n",
+    "plt.tight_layout()\n",
     "\n",
     "# Add happiness score text to bars\n",
     "# for column in happy_bar:\n",
     "#     height = column.get_height()\n",
     "#     plt.text(column.get_x() + column.get_width()/2.0, height, '%d' % float(height), ha='center', va='bottom')\n",
     "\n",
-    "plt.tight_layout()\n",
-    "plt.show()\n",
-    "\n"
+    "# Save figure\n",
+    "plt.savefig('happiest_countries.png')\n",
+    "\n",
+    "# Display\n",
+    "plt.show()"
    ]
   },
   {
@@ -192,8 +194,72 @@
     "plt.bar(countries, happiness, align=\"center\")\n",
     "plt.xticks(rotation=\"vertical\")\n",
     "plt.title(\"20 happiest countries with library usage data by rank, 2017\")\n",
-    "\n",
     "plt.tight_layout()\n",
+    "\n",
+    "# Save figure\n",
+    "plt.savefig('happiest_library_countries.png')\n",
+    "\n",
+    "# Display\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Scatter plot of physical visits and happiness\n",
+    "# Drop metric rows for non-visit data\n",
+    "visits_df = combined_df.drop(combined_df[combined_df[\"Metric\"] != \"Visits\"].index, inplace=False)\n",
+    "\n",
+    "# Sum visits for all library types for each country\n",
+    "total_visits = visits_df.groupby(\"Country\")\n",
+    "total_visits_sum = total_visits[\"Metric Data\"].sum()\n",
+    "\n",
+    "# Pull happiness scores for each country\n",
+    "happiness_score = total_visits[\"Happiness.Score\"].mean()\n",
+    "\n",
+    "# Plot\n",
+    "plt.scatter(total_visits_sum, happiness_score)\n",
+    "plt.xlabel(\"Number of visits\")\n",
+    "plt.ylabel(\"Happiness Score\")\n",
+    "plt.title(\"Number of library visits vs. Country happiness score\")\n",
+    "\n",
+    "# Save figure\n",
+    "plt.savefig('physicalvisits_v_happiness.png')\n",
+    "\n",
+    "# Display\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Scatter plot of loans and happiness\n",
+    "# Drop metric rows for non-physical loan data\n",
+    "loans_df = combined_df.drop(combined_df[combined_df[\"Metric\"] != \"Loans_books\"].index, inplace=False)\n",
+    "\n",
+    "# Sum loans for all library types for each country\n",
+    "total_loans = loans_df.groupby(\"Country\")\n",
+    "total_loans_sum = total_loans[\"Metric Data\"].sum()\n",
+    "\n",
+    "# Pull happiness scores for each country\n",
+    "happiness_score = total_loans[\"Happiness.Score\"].mean()\n",
+    "\n",
+    "# Plot\n",
+    "plt.scatter(total_loans_sum, happiness_score)\n",
+    "plt.xlabel(\"Number of physical loans\")\n",
+    "plt.ylabel(\"Happiness Score\")\n",
+    "plt.title(\"Number of physical loans vs. Country happiness score\")\n",
+    "\n",
+    "# Save figure\n",
+    "plt.savefig('physicalloans_v_happiness.png')\n",
+    "\n",
+    "# Display\n",
     "plt.show()"
    ]
   },
@@ -334,7 +400,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
