add population data and pie charts

--- a/WorkingNotebook.ipynb
+++ b/WorkingNotebook.ipynb
@@ -17,15 +17,19 @@
    "source": [
     "csv_path_happiness = \"Resources/2017_happiness.csv\"\n",
     "csv_path_libraries = \"Resources/lmw_data_09_Feb_2021.csv\"\n",
+    "csv_path_population = \"Resources/API_SP.POP.TOTL_DS2_en_csv_v2_2017895.csv\"\n",
     "\n",
     "happiness_df = pd.read_csv(csv_path_happiness)\n",
-    "libraries_df = pd.read_csv(csv_path_libraries, encoding='latin-1')"
+    "libraries_df = pd.read_csv(csv_path_libraries, encoding='latin-1')\n",
+    "population_df= pd.read_csv(csv_path_population)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "happiness_df.head()"
@@ -34,7 +38,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "libraries_df = libraries_df.loc[(libraries_df[\"Data Year\"] == \"2017\"), :]\n",
@@ -88,7 +94,7 @@
     "library_visits_df = libraries_df.loc[libraries_df[\"Metric\"]==\"Visits\", :]\n",
     "\n",
     "#library_visits_df.dropna()\n",
-    "library_visits_df[\"Metric Data (INT)\"] = library_visits_df[\"Metric Data\"].astype(int)\n",
+    "#library_visits_df[\"Metric Data (INT)\"] = library_visits_df[\"Metric Data\"].astype(int)\n",
     "\n",
     "\n",
     "#library_visits_df.head(100)\n",
@@ -111,7 +117,133 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "population_df = population_df[[\"Country Name\", \"2017\"]]\n",
+    "population_df = population_df.rename(columns={\"2017\":\"Population Amount\"})\n",
+    "population_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "libraries_2017_df = libraries_df.loc[(libraries_df[\"Data Year\"] == \"2017\"), [\"Library Type\", \"Region\",\"Country or Area\", \"Metric\", \"Metric Data\"]]\n",
+    "                                \n",
+    "libraries_2017_df = libraries_2017_df.dropna()\n",
+    "                                         \n",
+    "libraries_2017_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lib_pop_2017_df = pd.merge(libraries_2017_df, population_df, how='left', left_on=[\"Country or Area\"], right_on=[\"Country Name\"])\n",
+    "#lib_pop_2017_df[\"Metric Per Pop\"] = lib_pop_2017_df[\"Metric Data\"]/lib_pop_2017_df[\"Population Amount\"]\n",
+    "\n",
+    "lib_pop_2017_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lib_pop_2017_visits_df = lib_pop_2017_df.loc[lib_pop_2017_df[\"Metric\"]==\"Visits\", :]\n",
+    "\n",
+    "lib_pop_2017_visits_df = lib_pop_2017_visits_df.dropna()\n",
+    "\n",
+    "lib_pop_2017_visits_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "visits_by_type_df = lib_pop_2017_visits_df.groupby([\"Library Type\"]).sum()\n",
+    "\n",
+    "visits_by_type_df[\"Visits Per Capita\"] = visits_by_type_df[\"Metric Data\"]/visits_by_type_df[\"Population Amount\"]\n",
+    "\n",
+    "visits_by_type_df = visits_by_type_df.reset_index()\n",
+    "visits_by_type_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels = visits_by_type_df[\"Library Type\"]\n",
+    "\n",
+    "library_types = visits_by_type_df[\"Visits Per Capita\"]\n",
+    "\n",
+    "explode = (0, 0, 0.0, 0.0, 0.0, 0.0)\n",
+    "\n",
+    "title = f\"Library Visits Per Library Type\\n\"\n",
+    "plt.title(title)\n",
+    "plt.pie(library_types, labels=labels, explode=explode,\n",
+    "        autopct=\"%1.1f%%\", shadow=False, startangle=210)\n",
+    "plt.axis(\"equal\")\n",
+    "fig = plt.gcf()\n",
+    "fig.set_size_inches(8,8)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lib_pop_2017_amount_df = lib_pop_2017_df.loc[lib_pop_2017_df[\"Metric\"]==\"Libraries\", :]\n",
+    "\n",
+    "lib_pop_2017_amount_df = lib_pop_2017_amount_df.dropna()\n",
+    "\n",
+    "lib_pop_2017_amount_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "amount_by_type_df = lib_pop_2017_amount_df.groupby([\"Library Type\"]).sum()\n",
+    "\n",
+    "amount_by_type_df = amount_by_type_df.reset_index()\n",
+    "\n",
+    "amount_by_type_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels = amount_by_type_df[\"Library Type\"]\n",
+    "\n",
+    "library_types = amount_by_type_df[\"Metric Data\"]\n",
+    "\n",
+    "explode = (0, 0, 0.0, 0.0, 0.05, 0.0)\n",
+    "\n",
+    "title = f\"Amount of Libraries Per Library Type\\n\\n\\n\"\n",
+    "plt.title(title)\n",
+    "plt.pie(library_types, labels=labels, explode=explode, pctdistance=1.2, labeldistance=1.3,\n",
+    "        autopct=\"%1.1f%%\", shadow=False, startangle=115)\n",
+    "plt.axis(\"equal\")\n",
+    "fig = plt.gcf()\n",
+    "fig.set_size_inches(8,8)\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "code",
