add capitals file and save pie charts as pngs

--- a/WorkingNotebook.ipynb
+++ b/WorkingNotebook.ipynb
@@ -6,7 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np"
    ]
   },
   {
@@ -18,10 +20,12 @@
     "csv_path_happiness = \"Resources/2017_happiness.csv\"\n",
     "csv_path_libraries = \"Resources/lmw_data_09_Feb_2021.csv\"\n",
     "csv_path_population = \"Resources/API_SP.POP.TOTL_DS2_en_csv_v2_2017895.csv\"\n",
+    "csv_path_capitals = \"Resources/concap.csv\"\n",
     "\n",
     "happiness_df = pd.read_csv(csv_path_happiness)\n",
     "libraries_df = pd.read_csv(csv_path_libraries, encoding='latin-1')\n",
-    "population_df= pd.read_csv(csv_path_population)"
+    "population_df= pd.read_csv(csv_path_population)\n",
+    "capitals_df = pd.read_csv(csv_path_capitals)"
    ]
   },
   {
@@ -194,6 +198,10 @@
     "plt.axis(\"equal\")\n",
     "fig = plt.gcf()\n",
     "fig.set_size_inches(8,8)\n",
+    "\n",
+    "# Save figure\n",
+    "plt.savefig('VisitsPerLibraryType.png')\n",
+    "\n",
     "plt.show()"
    ]
   },
@@ -242,6 +250,9 @@
     "plt.axis(\"equal\")\n",
     "fig = plt.gcf()\n",
     "fig.set_size_inches(8,8)\n",
+    "\n",
+    "# Save figure\n",
+    "plt.savefig('AmountOfLibrariesPerLibraryType.png')\n",
     "plt.show()"
    ]
   },
