Heatmap added. Images moved to subfolder. main.py test file deleted.

--- a/SummaryNotebook.ipynb
+++ b/SummaryNotebook.ipynb
@@ -5,7 +5,50 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# ELLIE - start"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ELLIE - end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# MALLORY - start"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# MALLORY - end"
+   ]
   }
  ],
  "metadata": {
