add heatmaps and heatmap images

--- a/WorkingNotebook.ipynb
+++ b/WorkingNotebook.ipynb
@@ -607,7 +607,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Heatmap"
+    "# Heatmaps"
    ]
   },
   {
@@ -639,7 +639,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig = gmaps.figure()\n",
+    "fig1 = gmaps.figure(center=(20,5), zoom_level=2)\n",
     "\n",
     "# Store lat and lng in list\n",
     "locations = map_df[[\"CapitalLatitude\",\"CapitalLongitude\"]]\n",
@@ -649,12 +649,11 @@
     "\n",
     "# Create heat layer\n",
     "heat_layer = gmaps.heatmap_layer(locations, weights=happiness, dissipating=False, max_intensity=7.6, point_radius=3.5)\n",
-    "fig = gmaps.figure(center=(20,5), zoom_level=2)\n",
+    "\n",
     "\n",
     "# Add heat layer\n",
-    "fig.add_layer(heat_layer)\n",
-    "\n",
-    "fig"
+    "fig1.add_layer(heat_layer)\n",
+    "fig1"
    ]
   },
   {
@@ -663,7 +662,94 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Add markers for visits and number of libraries per capita\n"
+    "# Add markers for visits \n",
+    "visits_df = pd.merge(map_df, new_visits_df, left_on='Country', right_on='Country or Area')\n",
+    "\n",
+    "visit_locations = visits_df[[\"CapitalLatitude\",\"CapitalLongitude\"]].astype(float)\n",
+    "visits = visits_df[\"Metric Data\"].tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig2 = gmaps.figure(center=(20,5), zoom_level=2)\n",
+    "\n",
+    "#Create symbol layer\n",
+    "visits_layer = gmaps.symbol_layer(\n",
+    "    visit_locations, fill_color='blue',\n",
+    "    stroke_color='rgba(0, 0, 150, 0)', scale=5,\n",
+    "    info_box_content=[f\"Visit count: {visit}\" for visit in visits]\n",
+    ")\n",
+    "\n",
+    "fig2.add_layer(heat_layer)\n",
+    "fig2.add_layer(visits_layer)\n",
+    "\n",
+    "fig2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Add markers for number of libraries per capita\n",
+    "lib_amt_df = pd.merge(map_df, pop_lib_df, on='Country')\n",
+    "\n",
+    "lib_amt_df = lib_amt_df.head(10)\n",
+    "\n",
+    "lib_locations = lib_amt_df[[\"CapitalLatitude\",\"CapitalLongitude\"]].astype(float)\n",
+    "\n",
+    "lib_amt_df[\"Lib Per 100000\"] = lib_amt_df[\"Libraries Per Capita\"]*100000\n",
+    "lib_amt_df[\"Lib Per 100000\"] = lib_amt_df[\"Lib Per 100000\"].round(2)\n",
+    "\n",
+    "lib_amt_df = lib_amt_df.rename(columns={\"Happiness.Rank\": \"HappinessRank\", \n",
+    "                          \"Happiness.Score\":\"HappinessScore\"})\n",
+    "\n",
+    "lib_amt_df[\"HappinessRank\"] = lib_amt_df[\"HappinessRank\"].astype(int)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "info_box_template = \"\"\"\n",
+    "<dl>\n",
+    "<dt>Country</dt><dd>{Country}</dd>\n",
+    "<dt>Happiness Rank</dt><dd>{HappinessRank}</dd>\n",
+    "<dt>Libraries Per 100000 People</dt><dd>{Lib Per 100000}</dd>\n",
+    "</dl>\n",
+    "\"\"\"\n",
+    "\n",
+    "#<dt>Happiness Rank</dt><dd>{Happiness.Rank}</dd>\n",
+    "# Store the DataFrame Row\n",
+    "# NOTE: be sure to update with your DataFrame name\n",
+    "library_info = [info_box_template.format(**row) for index, row in lib_amt_df.iterrows()]\n",
+    "\n",
+    "library_info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig3 = gmaps.figure(center=(20,30), zoom_level=2)\n",
+    "\n",
+    "#Create symbol layer\n",
+    "libraries_layer = gmaps.marker_layer(\n",
+    "    lib_locations, info_box_content=library_info)\n",
+    "\n",
+    "fig3.add_layer(heat_layer)\n",
+    "fig3.add_layer(libraries_layer)\n",
+    "\n",
+    "fig3"
    ]
   }
  ],
