Updated scatter plots to account for per capita

--- a/WorkingNotebook.ipynb
+++ b/WorkingNotebook.ipynb
@@ -11,11 +11,12 @@
     "import numpy as np\n",
     "import requests\n",
     "import time\n",
+    "import scipy.stats as st\n",
     "from scipy.stats import linregress\n",
     "import gmaps\n",
     "import os\n",
     "\n",
-    "# Import API key *************NEED TO DO*************\n",
+    "# Import API key\n",
     "from api_key import gkey"
    ]
   },
@@ -316,13 +317,8 @@
     "plt.figure(figsize=(15,6))\n",
     "happy_bar = plt.bar(countries, happiness, align=\"center\")\n",
     "plt.xticks(rotation=\"vertical\")\n",
-    "plt.title(\"20 happiest countries by rank, 2017\")\n",
+    "plt.title(\"20 happiest countries by score, 2017\")\n",
     "plt.tight_layout()\n",
-    "\n",
-    "# Add happiness score text to bars\n",
-    "# for column in happy_bar:\n",
-    "#     height = column.get_height()\n",
-    "#     plt.text(column.get_x() + column.get_width()/2.0, height, '%d' % float(height), ha='center', va='bottom')\n",
     "\n",
     "# Save figure\n",
     "plt.savefig('Images/happiest_countries.png')\n",
@@ -349,7 +345,7 @@
     "plt.figure(figsize=(15,6))\n",
     "plt.bar(countries, happiness, align=\"center\")\n",
     "plt.xticks(rotation=\"vertical\")\n",
-    "plt.title(\"20 happiest countries with library usage data by rank, 2017\")\n",
+    "plt.title(\"20 happiest countries with library usage data by score, 2017\")\n",
     "plt.tight_layout()\n",
     "\n",
     "# Save figure\n",
@@ -371,14 +367,26 @@
     "\n",
     "# Sum visits for all library types for each country\n",
     "total_visits = visits_df.groupby(\"Country\")\n",
-    "total_visits_sum = total_visits[\"Metric Data\"].sum()\n",
+    "total_visits_sum = total_visits.sum()\n",
     "\n",
-    "# Pull happiness scores for each country\n",
-    "happiness_score = total_visits[\"Happiness.Score\"].mean()\n",
+    "# Get population data\n",
+    "population = total_visits.max()\n",
+    "\n",
+    "# Create new df's for plotting and merge\n",
+    "visits_sum_df = pd.DataFrame(total_visits_sum[\"Metric Data\"])\n",
+    "pop_df = pd.DataFrame(population[\"Population Amount\"])\n",
+    "\n",
+    "pop_visits_df = pd.merge(visits_sum_df, pop_df, how='left', on=[\"Country\"])\n",
+    "\n",
+    "# Calculate per capita and add as column\n",
+    "pop_visits_df[\"Visits per Capita\"] = pop_visits_df[\"Metric Data\"] / pop_visits_df[\"Population Amount\"]\n",
+    "\n",
+    "# Pull happiness scores for each country and add as column\n",
+    "pop_visits_df[\"Happiness Score\"] = total_visits[\"Happiness.Score\"].mean()\n",
     "\n",
     "# Plot\n",
-    "plt.scatter(total_visits_sum, happiness_score)\n",
-    "plt.xlabel(\"Number of visits\")\n",
+    "plt.scatter(pop_visits_df[\"Visits per Capita\"], pop_visits_df[\"Happiness Score\"])\n",
+    "plt.xlabel(\"Number of visits per capita\")\n",
     "plt.ylabel(\"Happiness Score\")\n",
     "plt.title(\"Number of library visits vs. Country happiness score\")\n",
     "\n",
@@ -395,20 +403,59 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Linear regression\n",
+    "x_values_visits = pop_visits_df[\"Visits per Capita\"]\n",
+    "y_values_visits = pop_visits_df[\"Happiness Score\"]\n",
+    "\n",
+    "(slope, intercept, rvalue, pvalue, stderr) = st.linregress(x_values_visits, y_values_visits)\n",
+    "regress_values = x_values_visits * slope + intercept\n",
+    "line_eq = \"y = \" + str(round(slope,2)) + \"x + \" + str(round(intercept,2))\n",
+    "\n",
+    "plt.scatter(x_values_visits,y_values_visits)\n",
+    "plt.plot(x_values_visits,regress_values,\"r-\")\n",
+    "plt.annotate(line_eq,(2,3.5),fontsize=15,color=\"red\")\n",
+    "\n",
+    "plt.xlabel(\"Number of visits per capita\")\n",
+    "plt.ylabel(\"Happiness Score\")\n",
+    "plt.title(\"Number of library visits vs. Country happiness score\")\n",
+    "\n",
+    "plt.savefig('Images/physicalvisits_v_happiness_regress.png')\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "## Scatter plot of loans and happiness\n",
     "# Drop metric rows for non-physical loan data\n",
     "loans_df = combined_df.drop(combined_df[combined_df[\"Metric\"] != \"Loans_books\"].index, inplace=False)\n",
     "\n",
     "# Sum loans for all library types for each country\n",
     "total_loans = loans_df.groupby(\"Country\")\n",
-    "total_loans_sum = total_loans[\"Metric Data\"].sum()\n",
+    "total_loans_sum = total_loans.sum()\n",
     "\n",
-    "# Pull happiness scores for each country\n",
-    "happiness_score = total_loans[\"Happiness.Score\"].mean()\n",
+    "# Get population data\n",
+    "population = total_loans.max()\n",
+    "\n",
+    "# Create new df's for plotting and merge\n",
+    "loans_sum_df = pd.DataFrame(total_loans_sum[\"Metric Data\"])\n",
+    "pop_df = pd.DataFrame(population[\"Population Amount\"])\n",
+    "\n",
+    "pop_loans_df = pd.merge(loans_sum_df, pop_df, how='left', on=[\"Country\"])\n",
+    "\n",
+    "# Calculate per capita and add as column\n",
+    "pop_loans_df[\"Loans per Capita\"] = pop_loans_df[\"Metric Data\"] / pop_loans_df[\"Population Amount\"]\n",
+    "\n",
+    "# Pull happiness scores for each country and add as column\n",
+    "pop_loans_df[\"Happiness Score\"] = total_loans[\"Happiness.Score\"].mean()\n",
     "\n",
     "# Plot\n",
-    "plt.scatter(total_loans_sum, happiness_score)\n",
-    "plt.xlabel(\"Number of physical loans\")\n",
+    "plt.scatter(pop_loans_df[\"Loans per Capita\"], pop_loans_df[\"Happiness Score\"])\n",
+    "plt.xlabel(\"Number of physical loans per capita\")\n",
     "plt.ylabel(\"Happiness Score\")\n",
     "plt.title(\"Number of physical loans vs. Country happiness score\")\n",
     "\n",
@@ -416,6 +463,33 @@
     "plt.savefig('Images/physicalloans_v_happiness.png')\n",
     "\n",
     "# Display\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Linear regression\n",
+    "x_values_loans = pop_loans_df[\"Loans per Capita\"]\n",
+    "y_values_loans = pop_loans_df[\"Happiness Score\"]\n",
+    "\n",
+    "(slope, intercept, rvalue, pvalue, stderr) = st.linregress(x_values_loans, y_values_loans)\n",
+    "regress_values = x_values_loans * slope + intercept\n",
+    "line_eq = \"y = \" + str(round(slope,2)) + \"x + \" + str(round(intercept,2))\n",
+    "\n",
+    "plt.scatter(x_values_loans,y_values_loans)\n",
+    "plt.plot(x_values_loans,regress_values,\"r-\")\n",
+    "plt.annotate(line_eq,(100,6),fontsize=15,color=\"red\")\n",
+    "\n",
+    "plt.xlabel(\"Number of physical loans per capita\")\n",
+    "plt.ylabel(\"Happiness Score\")\n",
+    "plt.title(\"Number of physical loans vs. Country happiness score\")\n",
+    "\n",
+    "plt.savefig('Images/physicalloans_v_happiness_regress.png')\n",
+    "\n",
     "plt.show()"
    ]
   },
