added hypotehsis to summarynotebook

--- a/SummaryNotebook.ipynb
+++ b/SummaryNotebook.ipynb
@@ -35,11 +35,23 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Hypothesis\n",
+    "\n",
+    "### Hypothesis\n",
+    "If libraries make people happy, then countries with more libraries and higher visitation rates of those libraries will have higher happiness scores.\n",
+    "\n",
+    "### Null Hypothesis\n",
+    "If libraries do not generate happiness then there will be no correlation between library count, library visits, and happiness scores.\n",
+    "\n",
+    "### Findings\n",
+    "The p-value for number of libraries versus happiness scores was ...\n",
+    "The p-value for number of visits to libraries versus happiness scores was...\n",
+    "\n",
+    "A p-value less than 0.05 means we must reject our null hypothesis. If it is greater we cannot reject our null hypothesis."
+   ]
   },
   {
    "cell_type": "code",
